# nanoVLM

./: .gitignore  evaluation.py  pyproject.toml  train.py  train_nanoVLM.ipynb
data/: advanced_datasets.py  datasets.py
models/: config.py  language_model.py
