[project]
name = "nanovlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "einops>=0.8.2",
    "huggingface-hub>=0.35.3",
    "numpy>=2.2.6",
    "pillow>=12.1.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.57.6",
    "wandb>=0.24.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
